--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,5 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: codica_app_production
-  username: codica_app
-  password: <%= ENV["CODICA_APP_DATABASE_PASSWORD"] %>
+  # <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
